--- a/inf-search/inf_search_2_problem.ipynb
+++ b/inf-search/inf_search_2_problem.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,18 +482,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['C' 'C' 'C' 'S']\n",
+      "[['C' 'C' 'S' 'C']\n",
       " ['C' 'C' 'W' 'C']\n",
       " ['C' 'C' 'C' 'C']\n",
-      " ['C' 'W' 'W' 'W']\n",
-      " ['C' 'C' 'C' 'G']]\n"
+      " ['C' 'C' 'W' 'W']\n",
+      " ['C' 'C' 'W' 'G']]\n"
      ]
     },
     {
@@ -509,6 +509,7 @@
      "output_type": "stream",
      "text": [
       "----------- USING HEURISTIC:  l1_norm\n",
+      "H is: l1_norm\n",
       "\u001b[96m########################################################\u001b[0m\n",
       "\u001b[96m#######  GREEDY BEST FIRST TREE SEARCH PROBLEM  ########\u001b[0m\n",
       "\u001b[96m########################################################\u001b[0m\n",
@@ -521,8 +522,8 @@
       "\u001b[96m########################################################\u001b[0m\n",
       "\u001b[96m#######  GREEDY BEST FIRST GRAPH SEARCH PROBLEM  #######\u001b[0m\n",
       "\u001b[96m########################################################\u001b[0m\n",
-      "Your solution: [(1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
-      "N° of nodes explored: 45\n",
+      "Your solution: None\n",
+      "N° of nodes explored: 61\n",
       "Max n° of nodes in memory: 15\n",
       "\n",
       "\u001b[91m> Your solution is not correct, should be: [(0, 3), (1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
@@ -532,7 +533,9 @@
    ],
    "source": [
     "#envname = \"SmallMaze-v0\"\n",
-    "envname = \"GrdMaze-v0\"\n",
+    "#envname = \"GrdMaze-v0\"\n",
+    "envname = \"BlockedMaze-v0\"\n",
+    "\n",
     "environment = gym.make(envname)\n",
     "environment.render()\n",
     "\n",
@@ -544,6 +547,8 @@
     "    raise Exception(\"HEURISTIC NOT FOUND: \" + heuristic)\n",
     "\n",
     "H = getattr(Heu, heuristic)\n",
+    "#double check\n",
+    "print(\"H is: \" + H.__name__)\n",
     "\n",
     "solution_ts, time_ts, memory_ts = greedy(environment, greedy_tree_search)\n",
     "solution_gs, time_gs, memory_gs = greedy(environment, greedy_graph_search)\n",
@@ -623,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,8 +661,11 @@
     "\n",
     "    time_cost = 1\n",
     "    space_cost = 1\n",
+    "\n",
+    "    timeout = 99999\n",
     "    \n",
     "    while True:\n",
+    "        if time_cost >= timeout: return (\"time-out\", time_cost, space_cost)\n",
     "        #\n",
     "        # YOUR CODE HERE ...\n",
     "        #\n",
@@ -709,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,18 +842,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['C' 'C' 'C' 'S']\n",
+      "[['C' 'C' 'S' 'C']\n",
       " ['C' 'C' 'W' 'C']\n",
       " ['C' 'C' 'C' 'C']\n",
-      " ['C' 'W' 'W' 'W']\n",
-      " ['C' 'C' 'C' 'G']]\n"
+      " ['C' 'C' 'W' 'W']\n",
+      " ['C' 'C' 'W' 'G']]\n"
      ]
     },
     {
@@ -853,29 +861,30 @@
      "output_type": "stream",
      "text": [
       "Which heuristic did you use? (l1_norm, l2_norm, chebyshev)\n",
-      " chebyshev\n"
+      " l2_norm\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----------- USING HEURISTIC:  chebyshev\n",
+      "----------- USING HEURISTIC:  l2_norm\n",
+      "H is: l2_norm\n",
       "\u001b[96m#########################################\u001b[0m\n",
       "\u001b[96m#######  A* TREE SEARCH PROBLEM  ########\u001b[0m\n",
       "\u001b[96m#########################################\u001b[0m\n",
-      "Your solution: [(0, 2), (0, 1), (1, 1), (1, 0), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
-      "N° of nodes explored: 40825\n",
-      "Max n° of nodes in memory: 30619\n",
+      "Your solution: time-out\n",
+      "N° of nodes explored: 100001\n",
+      "Max n° of nodes in memory: 75001\n",
       "\n",
-      "\u001b[91m> Your solution is not correct!\n",
+      "\u001b[91m> Your solution is not correct, should be: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
       "\u001b[0m\n",
       "\u001b[96m##########################################\u001b[0m\n",
       "\u001b[96m#######  A* GRAPH SEARCH PROBLEM  ########\u001b[0m\n",
       "\u001b[96m##########################################\u001b[0m\n",
-      "Your solution: [(1, 3), (2, 3), (2, 2), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
+      "Your solution: None\n",
       "N° of nodes explored: 61\n",
-      "Max n° of nodes in memory: 16\n",
+      "Max n° of nodes in memory: 15\n",
       "\n",
       "\u001b[91m> Your solution is not correct, should be: [(0, 1), (1, 1), (2, 1), (2, 0), (3, 0), (4, 0), (4, 1), (4, 2), (4, 3)]\n",
       "\u001b[0m\n"
@@ -884,7 +893,8 @@
    ],
    "source": [
     "#envname = \"SmallMaze-v0\"\n",
-    "envname = \"GrdMaze-v0\"\n",
+    "#envname = \"GrdMaze-v0\"\n",
+    "envname = \"BlockedMaze-v0\"\n",
     "\n",
     "environment = gym.make(envname)\n",
     "environment.render()\n",
@@ -897,6 +907,7 @@
     "    raise Exception(\"HEURISTIC NOT FOUND: \" + heuristic)\n",
     "\n",
     "H = getattr(Heu, heuristic)\n",
+    "print(\"H is: \" + H.__name__)\n",
     "\n",
     "solution_ts, time_ts, memory_ts = astar(environment, astar_tree_search)\n",
     "solution_gs, time_gs, memory_gs = astar(environment, astar_graph_search)\n",
